--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
       </div>
     </footer>
 
-    <!-- <div class="loader-container">
+    <div class="loader-container">
       <img src="Images/logogif.gif" alt="">
-  </div> -->
+  </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/isotope.pkgd.min.js"></script>
