--- a/index.html
+++ b/index.html
@@ -262,9 +262,7 @@
                     </div>
 
                     <p class="review-text">
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                      Fugiat voluptate consequatur aut tenetur fugit error
-                      molestiae quaerat ex odio rem?
+                      Menja game was fascinating the graphics of this game was very good how cube smashed with a particular time i really like this game.
                     </p>
 
                     <div class="review-info">
@@ -284,9 +282,7 @@
                     </div>
 
                     <p class="review-text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Cupiditate voluptatum enim nemo quod amet dolorum aliquam,
-                      sapiente omnis eaque consectetur.
+                      The tic tak toe game reminds me my school days when we play this game with our friends in the free time Or when we r getting bor in the lecture so we draw on a paper and play this game and now a days children are forgetting this game . This game literally reminds my school days and the game was fabulous to play.
                     </p>
 
                     <div class="review-info">
@@ -306,9 +302,7 @@
                     </div>
 
                     <p class="review-text">
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                      Perspiciatis ab incidunt, dicta quam inventore ipsum
-                      dolor. Consectetur nam incidunt error!
+                      Space invander is really very exciting . Sun have to destroy  asteroids as fast as possible and player have to focus on all asteroids. The animation of the game was very amazing.
                     </p>
 
                     <div class="review-info">
