--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <h1 header-title>GAMING </h1>
               <h3 header-title>LAND </h3>
               <p class="text">
-                Gaming Land is a website where you can play lots of games which are build using <b>Html</b>, <b>CSS</b> and <b>JavaScript</b>. Most of the games are destop friendly so play games on destop.
+                Gaming Land is a website where you can play lots of games which are build using <b>Html</b>, <b>CSS</b> and <b>JavaScript</b>. Most of the games are desktop friendly so play games on desktop.
               </p>
             </div>
 
